deploy/cluster/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: django-service # this need to be either NodePort or LoadBalancer
          servicePort: 8000
      - path: /flower
        backend:
          serviceName: flower-service # this need to be either NodePort or LoadBalancer
          servicePort: 5555
